--- a/css/main.css
+++ b/css/main.css
@@ -44,17 +44,17 @@ header #logo span {
 	margin-bottom: auto;
 	margin-left: 10px;
 	color: #fff;
-	font-size: 18px;
+	font-size: 24px;
 }
 
 #about {
 	display: flex;
+	justify-content: center;
 	text-align: center;
-	font-size: 18px;
+	font-size: 24px;
 	margin-top: auto;
 	margin-bottom: auto;
 	line-height: 40px;
-	padding-top: 15px;
 }
 
 #about span {
@@ -182,6 +182,47 @@ header.fixed #logo span {
 
 #top h1 {
 	padding-top: 25%;
+}
+
+#About_us {
+	color: white;
+	width: 100%;
+	height: 100%;
+	padding: 30px 0;
+	float: left;
+	background-image: url(https://oir.mobi/uploads/posts/2021-03/1616530380_46-p-chisto-chernii-fon-51.jpg);
+}
+
+.block-title {
+	margin: 50px 0;
+	text-align: center;
+	font-size: 3em;
+}
+
+#About_us .block-parent {
+	display: flex;
+	flex-direction: row;
+	margin-top: 100px;
+}
+
+#About_us .block1 {
+	display: flex;
+	width: 60%;
+	justify-content: center;
+}
+
+#About_us .block2 {
+	display: flex;
+	flex-basis: 30%;
+	width: 40%;
+	color: white;
+	align-self: center;
+}
+
+#About_us .image {
+	width: 500px;
+	height: 500px;
+	border-radius: 100%;
 }
 
 #Linen {
