--- a/css/main.css
+++ b/css/main.css
@@ -19,6 +19,43 @@ body {
 	font-family: Trebuchet MS, Helvetica;
 }
 
+.sidenav {
+	height: 100%; /* 100% Full-height */
+	width: 0; /* 0 ширина - изменить это с помощью JavaScript */
+	position: fixed; /* Оставайтесь на месте */
+	z-index: 1; /* Оставайтесь сверху */
+	top: 0; /* Оставайтесь наверху */
+	left: 0;
+	background-color: #111; /* Фон черный*/
+	overflow-x: hidden; /* Отключить горизонтальную прокрутку */
+	padding-top: 60px; /* Поместите контент в 60px сверху */
+	transition: 0.5s; /* 0.5 второй эффект перехода слайда в боковой навигации */
+}
+
+/* Ссылки меню навигации */
+.sidenav a {
+	padding: 8px 8px 8px 32px;
+	text-decoration: none;
+	font-size: 25px;
+	color: #818181;
+	display: block;
+	transition: 0.3s;
+}
+
+/* Когда вы наводите курсор мыши на навигационные ссылки, изменяется их цвет */
+.sidenav a:hover {
+	color: #f1f1f1;
+}
+
+/* Положение и стиль кнопки закрытия (верхний правый угол) */
+.sidenav .closebtn {
+	position: absolute;
+	top: 0;
+	right: 25px;
+	font-size: 36px;
+	margin-left: 50px;
+}
+
 header {
 	display: flex;
 	width: 100%;
@@ -44,7 +81,8 @@ header #logo span {
 	margin-bottom: auto;
 	margin-left: 10px;
 	color: #fff;
-	font-size: 24px;
+	text-align: center;
+	font-size: 22px;
 }
 
 #about {
@@ -132,6 +170,10 @@ header.fixed #logo {
 }
 
 header.fixed #logo span {
+	color: #343434;
+}
+
+header.fixed .nav-toggle {
 	color: #343434;
 }
 
