--- a/css/main.css
+++ b/css/main.css
@@ -111,7 +111,7 @@ header #logo span {
 	color: #fff;
 }
 
-#about .dropdown {
+#about .menu {
 	cursor: pointer;
 	margin-top: auto;
 	display: flex;
@@ -119,41 +119,12 @@ header #logo span {
 	margin-left: 7%;
 }
 
-#about .dropdown-content {
-	margin-top: 40px;
-	display: none;
-	position: absolute;
-	font: times;
-	font-size: 14px;
-	background-color: #f1f1f1;
-	max-width: 160px;
-	min-width: 100px;
-	z-index: 1;
-}
-
-#about .dropdown a {
+#about .menu a {
 	color: white;
 	text-decoration: none;
 }
 
-#about .dropdown-content a {
-	float: none;
-	color: black;
-	padding: 0px 10px;
-	text-decoration: none;
-	display: block;
-	text-align: left;
-}
-
-#about .dropdown-content a:hover {
-	background-color: #ddd;
-}
-
-#about .dropdown:hover .dropdown-content {
-	display: block;
-}
-
-#about .dropdown:hover span {
+#about .menu:hover span {
 	color: #b0b0b0;
 	text-decoration: underline;
 }
@@ -172,7 +143,7 @@ header.fixed #logo {
 	color: #343434;
 }
 
-.fixed #about .dropdown a {
+.fixed #about .menu a {
 	color: #343434;
 }
 
@@ -391,7 +362,7 @@ header.fixed .nav-toggle {
 	color: #fff;
 }
 #hemp .text {
-	padding: 100px 20%;
+	padding: 25px 20%;
 	width: 60%;
 	text-align: left;
 	float: left;
@@ -412,6 +383,69 @@ header.fixed .nav-toggle {
 	padding-top: 20px;
 	padding-bottom: 20px;
 	color: #fff;
+}
+
+#bigBlock h5 {
+	visibility: hidden;
+}
+
+.dopinfo {
+	width: 80%;
+	height: auto;
+	padding: 20px 10%;
+	display: flex;
+	flex-direction: column;
+}
+
+.dopinfo h1 {
+	font-size: 40px;
+	text-align: center;
+	padding: 10px 0;
+}
+
+.dopinfo h2 {
+	font-size: 28px;
+	float: left;
+	padding: 10px 0;
+}
+
+.glavLen,
+.glavHemp {
+	float: left;
+}
+
+.hempInfo,
+.lenInfo {
+	font-family: Georgia, "Times New Roman", Times, serif;
+	font-size: 20px;
+	background: none;
+	overflow: hidden;
+	cursor: pointer;
+	border: 0;
+	align-items: center;
+	padding: 10px 0;
+}
+
+.lenInfoDropButtonHidden,
+.HempInfoDropButtonHidden {
+	height: 0;
+	visibility: hidden;
+	opacity: 0;
+	overflow: hidden;
+}
+
+.lenInfoDropButtonActive,
+.HempInfoDropButtonActive {
+	height: auto;
+	visibility: visible;
+	opacity: 1;
+	overflow: visible;
+	transition: all 0.3s cubic-bezier(0.4, 0, 0.4, 1);
+}
+
+.lenInfoDropButtonActive p,
+.HempInfoDropButtonActive p {
+	padding: 5px 0;
 }
 
 #Contact {
